SWML-14 fix date/time picker display on iOS

--- a/softWrench.sW4.Web/Content/styles/default/crud-fields.css
+++ b/softWrench.sW4.Web/Content/styles/default/crud-fields.css
@@ -236,3 +236,8 @@ input[type=search] {
     margin-bottom: 0;
 }
 /*SM - SWWEB-732*/
+
+input[type="date"], input[type="time"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
